FIXED Zeilenumbruch mit "word-wrap: break-word"

--- a/src/main/resources/static/resources/css/style.css
+++ b/src/main/resources/static/resources/css/style.css
@@ -10,6 +10,7 @@ body {
 }
 
 p {
+    text-align: justify;
     white-space: pre-wrap;
 }
 
@@ -95,10 +96,6 @@ span.navbar-toggler-icon {
 
 div.sticky-top.sticky-offet {
     top: 56px;
-}
-
-p {
-    text-align: justify;
 }
 
 .container {
